fix z-index map popup

--- a/portail_d4c/css/visualisation.css
+++ b/portail_d4c/css/visualisation.css
@@ -1377,7 +1377,7 @@ html[dir=rtl] .d4c-color-picker__hex-color-input{text-align:right}
 .d4c-color-picker__input-button-arrow[readonly]{opacity:.5}
 .d4c-color-picker__color-sample{display:inline-block;width:1.4rem;height:1.4rem;margin-right:.5rem;border:1px solid #ccc;border-radius:50%;pointer-events:none}
 html[dir=rtl] .d4c-color-picker__color-sample{margin-left:.5rem;margin-right:0}
-.d4c-color-picker__window{position:absolute;z-index:1000;width:270px;height:375px;background-color:#fff;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;text-align:center;-webkit-box-shadow:2px 2px 2px 1px rgba(145,145,145,.5);box-shadow:2px 2px 2px 1px rgba(145,145,145,.5);border:1px solid #FFF;border-radius:3px;-webkit-box-sizing:border-box;box-sizing:border-box;cursor:default}
+.d4c-color-picker__window{position:absolute;z-index:3000;width:270px;height:375px;background-color:#fff;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;text-align:center;-webkit-box-shadow:2px 2px 2px 1px rgba(145,145,145,.5);box-shadow:2px 2px 2px 1px rgba(145,145,145,.5);border:1px solid #FFF;border-radius:3px;-webkit-box-sizing:border-box;box-sizing:border-box;cursor:default}
 .d4c-color-picker__menu-tabs{display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-wrap:nowrap;flex-wrap:nowrap;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;list-style-type:none;border-radius:3px 3px 0 0;margin:0;padding:.4rem .2rem 0 .2rem;background-color:#EFEFEF;z-index:99}
 .d4c-color-picker__menu-tab{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;width:50%;height:2.6rem;color:#333;font-size:.8rem;padding:.4rem .3rem;border-radius:3px 3px 0 0;margin:0 .2rem -1px .2rem;border:1px solid transparent}
 .d4c-color-picker__menu-tab--active,.d4c-color-picker__menu-tab:hover{text-decoration:none;border:1px solid #FFF;background-color:#FFF;color:#313131}
@@ -2263,7 +2263,7 @@ html[dir=rtl] .d4c-search-input__reset{left:2.6rem;right:auto}
 .d4c-map-location-selector{position:relative}
 .d4c-map-location-selector__map{height:300px;width:400px}
 .d4c-map-location-selector__overlay{position:absolute;left:50px;top:50px;height:200px;width:300px;background:rgba(255,255,255,.8);border:1px solid #888;opacity:.7;pointer-events:none}
-.d4c-mapbuilder__main-panel{position: absolute;top: 10px;left: 50px;/* bottom: 90px; *//* right: 0; */width: 225px;/* margin-left: auto; *//* margin-right: auto; */background-color: #fff;opacity: 0.6;border-radius: 2px;-webkit-box-shadow: 0 1px 5px rgba(0,0,0,.65);box-shadow: 0 1px 5px rgba(0,0,0,.65);color: #333;transition: all ease 0.5s; z-index: 400}
+.d4c-mapbuilder__main-panel{position: absolute;top: 10px;left: 50px;/* bottom: 90px; *//* right: 0; */width: 225px;/* margin-left: auto; *//* margin-right: auto; */background-color: #fff;opacity: 0.6;border-radius: 2px;-webkit-box-shadow: 0 1px 5px rgba(0,0,0,.65);box-shadow: 0 1px 5px rgba(0,0,0,.65);color: #333;transition: all ease 0.5s; z-index: 1000}
 .d4c-mapbuilder__main-panel:hover{opacity: 1;transition: all ease 0.5s;}
 .d4c-mapbuilder__main-panel__top-bar{border-bottom: solid 1px rgba(0,0,0,.1);display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; /* border-top-left-radius: 4px; */ /* border-top-right-radius: 4px; */ /* overflow: hidden; */ text-align: center;} 
 .d4c-mapbuilder__main-panel__map-selection{-webkit-box-flex:0;-ms-flex-positive:0;flex-grow:0;-ms-flex-negative:0;flex-shrink:0}
@@ -2278,7 +2278,8 @@ html[dir=rtl] .d4c-search-input__reset{left:2.6rem;right:auto}
 .d4c-mapbuilder__main-panel__button--with-disabled-tooltip{width:100%}
 .d4c-mapbuilder__main-panel__metadata-bar{border-top: solid 1px rgba(0,0,0,.1);border-bottom: solid 1px rgba(0,0,0,.1);display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column;text-align: left;padding:5px;} 
 .d4c-mapbuilder__main-panel__metadata:disabled{color:inherit;opacity:.3}
-.d4c-mapbuilder__datasets-panel{position:absolute;top:0;bottom:0;right:0;width:400px;background-color:#EFEFEF;-webkit-box-shadow:0 4px 5px rgba(0,0,0,.65);box-shadow:0 4px 5px rgba(0,0,0,.65);z-index:8}
+.d4c-mapbuilder__main-panel-modals{position:fixed;z-index: 2000;}
+.d4c-mapbuilder__datasets-panel{position:absolute;top:0;bottom:0;right:0;width:400px;background-color:#EFEFEF;-webkit-box-shadow:0 4px 5px rgba(0,0,0,.65);box-shadow:0 4px 5px rgba(0,0,0,.65);z-index:1000}
 .d4c-mapbuilder__datasets-panel__groups{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-ms-flex-wrap:nowrap;flex-wrap:nowrap;max-height:100%;background-color:#FFF}
 .d4c-mapbuilder__datasets-panel__groups>div:first-child{overflow-y:auto}
 .d4c-mapbuilder__datasets-panel__group-container{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;font-size:1rem;color:#777;line-height:40px;padding:0 15px}
